--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
   <section class="hero">
     <h1>Embedded Systems • Software • Networking</h1>
     <p>
-      I am a Master’s student in Embedded Systems at Uppsala University with a background in
+      I am a Master's student in Embedded Systems at Uppsala University with a background in
       Computer Science. I focus on embedded software, real time systems, networking, and
       connected devices, and I am currently targeting embedded focused roles.
     </p>
