--- a/index.html
+++ b/index.html
@@ -15,13 +15,23 @@
     <nav>
         <div class="nav-container">
             <div class="logo">Amine Jamal</div>
-            <div class="nav-links">
+
+            <div class="nav-links desktop-nav">
                 <a href="projects.html">Projects</a>
                 <a href="experience.html">Experience</a>
                 <a href="activities.html">Activities</a>
             </div>
+
+            <div class="menu-btn" onclick="toggleMenu()">⋮</div>
+        </div>
+
+        <div class="mobile-menu" id="mobileMenu">
+            <a href="projects.html">Projects</a>
+            <a href="experience.html">Experience</a>
+            <a href="activities.html">Activities</a>
         </div>
     </nav>
+
 
     <section class="hero">
         <h1>About Me</h1>
@@ -59,26 +69,26 @@
         </ul>
 
     </section>
-<section class="section">
-    <h2>More About Me</h2>
+    <section class="section">
+        <h2>More About Me</h2>
 
-    <div class="info-links">
-        <a href="experience.html" class="info-card">
-            <h3>Experience</h3>
-            <p>Professional roles, internships, and industry work.</p>
-        </a>
+        <div class="info-links">
+            <a href="experience.html" class="info-card">
+                <h3>Experience</h3>
+                <p>Professional roles, internships, and industry work.</p>
+            </a>
 
-        <a href="projects.html" class="info-card">
-            <h3>Projects</h3>
-            <p>Embedded systems, C development, and software projects.</p>
-        </a>
+            <a href="projects.html" class="info-card">
+                <h3>Projects</h3>
+                <p>Embedded systems, C development, and software projects.</p>
+            </a>
 
-        <a href="activities.html" class="info-card">
-            <h3>Activities</h3>
-            <p>Hackathons, volunteering, and student initiatives.</p>
-        </a>
-    </div>
-</section>
+            <a href="activities.html" class="info-card">
+                <h3>Activities</h3>
+                <p>Hackathons, volunteering, and student initiatives.</p>
+            </a>
+        </div>
+    </section>
 
 
     <section class="section">
@@ -94,6 +104,13 @@
     <footer>
         <p>© Amine Jamal</p>
     </footer>
+
+    <script>
+  function toggleMenu() {
+    const menu = document.getElementById("mobileMenu");
+    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
+  }
+</script>
 
 </body>
 
