--- a/index.html
+++ b/index.html
@@ -16,15 +16,18 @@
         <div class="nav-container">
             <div class="logo">Amine Jamal</div>
 
+            <!-- DESKTOP -->
             <div class="nav-links desktop-nav">
                 <a href="projects.html">Projects</a>
                 <a href="experience.html">Experience</a>
                 <a href="activities.html">Activities</a>
             </div>
 
+            <!-- MOBILE MENU BUTTON -->
             <div class="menu-btn" onclick="toggleMenu()">⋮</div>
         </div>
 
+        <!-- MOBILE DROPDOWN -->
         <div class="mobile-menu" id="mobileMenu">
             <a href="projects.html">Projects</a>
             <a href="experience.html">Experience</a>
@@ -71,18 +74,15 @@
     </section>
     <section class="section">
         <h2>More About Me</h2>
-
         <div class="info-links">
-            <a href="experience.html" class="info-card">
-                <h3>Experience</h3>
-                <p>Professional roles, internships, and industry work.</p>
-            </a>
-
             <a href="projects.html" class="info-card">
                 <h3>Projects</h3>
                 <p>Embedded systems, C development, and software projects.</p>
             </a>
-
+            <a href="experience.html" class="info-card">
+                <h3>Experience</h3>
+                <p>Professional roles, internships, and industry work.</p>
+            </a>
             <a href="activities.html" class="info-card">
                 <h3>Activities</h3>
                 <p>Hackathons, volunteering, and student initiatives.</p>
@@ -104,13 +104,6 @@
     <footer>
         <p>© Amine Jamal</p>
     </footer>
-
-    <script>
-  function toggleMenu() {
-    const menu = document.getElementById("mobileMenu");
-    menu.style.display = menu.style.display === "flex" ? "none" : "flex";
-  }
-</script>
 
 </body>
 
