updating nav bar

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <nav>
         <div class="nav-container">
-            <div class="logo">Amine Jamal</div>
+            <div class="logo"> <a href="index.html" >Amine Jamal</a></div>
 
             <!-- DESKTOP -->
             <div class="nav-links desktop-nav">
