--- a/projects.html
+++ b/projects.html
@@ -12,23 +12,31 @@
 
     <div class="grid-bg"></div>
 
+
     <nav>
         <div class="nav-container">
-            <div class="logo">Amine Jamal</div>
+            <div class="logo"> <a href="index.html" >Amine Jamal</a></div>
 
+            <!-- DESKTOP -->
             <div class="nav-links desktop-nav">
-                <a href="index.html">Home</a>
-                <a href="#all-projects">All Projects</a>
+                <a href="projects.html">Projects</a>
+                <a href="experience.html">Experience</a>
+                <a href="activities.html">Activities</a>
             </div>
 
+            <!-- MOBILE MENU BUTTON -->
             <div class="menu-btn" onclick="toggleMenu()">⋮</div>
         </div>
 
+        <!-- MOBILE DROPDOWN -->
         <div class="mobile-menu" id="mobileMenu">
-            <a href="index.html">Home</a>
-            <a href="#all-projects">All Projects</a>
+            <a href="projects.html">Projects</a>
+            <a href="experience.html">Experience</a>
+            <a href="activities.html">Activities</a>
         </div>
     </nav>
+
+
 
     <section class="hero">
         <h1>All Projects</h1>
