Adding first project and small tweaks

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
     <section class="section">
         <h2>Links</h2>
         <div class="links">
-            <a href="assets/cv.pdf" target="_blank">CV</a>
+            <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
             <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
             <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
             <a href="mailto:aminejamal003@gmail.com">Email</a>
