--- a/projects.html
+++ b/projects.html
@@ -15,7 +15,7 @@
 
     <nav>
         <div class="nav-container">
-            <div class="logo"> <a href="index.html" >Amine Jamal</a></div>
+            <div class="logo"> <a href="index.html">Amine Jamal</a></div>
 
             <!-- DESKTOP -->
             <div class="nav-links desktop-nav">
@@ -40,26 +40,33 @@
 
     <section class="hero">
         <h1>All Projects</h1>
-        <p>Click on a project title to expand and view details, images, technologies used, what I learned, and links to GitHub repos.</p>
+        <p>Click on a project title to expand and view details, images, technologies used, what I learned, and links to
+            GitHub repos.</p>
     </section>
 
     <section class="section" id="all-projects">
-
         <!-- Project Example -->
         <div class="project">
             <div class="project-header" onclick="toggleProject(this)">
                 <span class="arrow">►</span>
-                <h3>Indoor Temperature–Humidity Monitoring System</h3>
+                <h3>Webots Robot Simulation</h3>
+
             </div>
             <div class="project-content">
-                <p><strong>Description:</strong> Raspberry Pi system with a real-time web dashboard for monitoring temperature and humidity.</p>
-                <p><strong>Tools/Skills:</strong> Python, Raspberry Pi, GPIO, Web Dashboard</p>
-                <p><strong>Learning:</strong> Sensor interfacing, data visualization, web integration, Linux systems</p>
-                <p><strong>University:</strong> Uppsala University</p>
-                <p><strong>Date:</strong> Sep 2025 – Nov 2025</p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/pi-thermometer" target="_blank">Repo Link</a></p>
-                <!-- Optional: Images -->
-                <!-- <img src="assets/images/pi-thermometer.jpg" alt="Pi Thermometer Screenshot" class="project-image"> -->
+                <p><strong>Description:</strong> Real time robotics control system developed in Ada using the Webots
+                    e-puck simulator. Implements event driven manual control, autonomous line following, and obstacle
+                    aware
+                    distance regulation.</p>
+                <p><strong>Tools/Skills:</strong> Ada, Webots, C (Webots backend), Real Time Systems, Event Driven
+                    Scheduling,
+                    Periodic Scheduling, Concurrent Programming</p>
+                <p><strong>Learning:</strong> Real time task scheduling, protected objects for synchronization,
+                    sensor-based
+                    control loops, robotics simulation, embedded systems design</p>
+                <p><strong>At:</strong> Uppsala University</p>
+                <p><strong>Date:</strong> Nov 2025</p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/realtime-systems-webots-ada" target="_blank">
+                        Please check out the repo for more information</a></p>
             </div>
         </div>
 
@@ -69,12 +76,15 @@
                 <h3>Webots Robot Simulation</h3>
             </div>
             <div class="project-content">
-                <p><strong>Description:</strong> Programmed autonomous robot behavior using Ada in Webots simulation.</p>
+                <p><strong>Description:</strong> Programmed autonomous robot behavior using Ada in Webots simulation.
+                </p>
                 <p><strong>Tools/Skills:</strong> Ada, Webots, Robotics Algorithms</p>
                 <p><strong>Learning:</strong> Robotics programming, simulation environment, path planning</p>
                 <p><strong>University:</strong> Uppsala University</p>
                 <p><strong>Date:</strong> Sep 2025 – Nov 2025</p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/webots-robot" target="_blank">Repo Link</a></p>
+                <p><strong>GitHub:</strong> Please check out the repo for more information <a
+                        href="https://github.com/AmineJml/webots-robot" target="_blank">Repo
+                        Link</a></p>
             </div>
         </div>
 
@@ -84,12 +94,14 @@
                 <h3>Parallel Coding Exercises</h3>
             </div>
             <div class="project-content">
-                <p><strong>Description:</strong> Optimized embedded algorithms using parallelization and concurrency techniques.</p>
+                <p><strong>Description:</strong> Optimized embedded algorithms using parallelization and concurrency
+                    techniques.</p>
                 <p><strong>Tools/Skills:</strong> C/C++, Multithreading, Performance Tuning</p>
                 <p><strong>Learning:</strong> Concurrency, performance optimization, embedded coding practices</p>
                 <p><strong>University:</strong> Uppsala University</p>
                 <p><strong>Date:</strong> Sep 2025 – Nov 2025</p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/parallel-exercises" target="_blank">Repo Link</a></p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/parallel-exercises"
+                        target="_blank">Repo Link</a></p>
             </div>
         </div>
 
