--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Amine Jamal | Embedded Systems</title>
+    <title>Amine Jamal</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -38,11 +38,14 @@
 
     <section class="hero">
         <h1>About Me</h1>
-        <p>
-            I am a Master's student in Embedded Systems at Uppsala University with a background in
-            Computer Science. I focus on embedded software, real time systems, networking, and
-            connected devices, and I am currently targeting embedded focused roles.
-        </p>
+        <p> I am a first year Embedded Systems student at Uppsala University, holding a Bachelor's degree from the Lebanese American
+        University. I have experience contributing to software engineering projects, and I am now focusing on embedded systems,
+        motivated by curiosity for low level programming, real time systems, and hardware software integration.
+        
+        <br> </br>
+        This portfolio showcases a selection of my projects and ongoing work. I'm always looking forward to learn, collaborate,
+        and build new things. Feel free to reach out if you'd like to work on a project together!
+</p>
     </section>
 
     <section class="section">
@@ -64,16 +67,14 @@
     <section class="section">
         <h2>Current Focus</h2>
         <ul>
-            <li>Embedded software in C and C++</li>
+            <li>Embedded software</li>
             <li>Linux based systems</li>
             <li>Microcontrollers and real time systems</li>
-            <li>Networking and IoT</li>
-            <li>Building embedded and systems projects</li>
         </ul>
 
     </section>
     <section class="section">
-        <h2>More About Me</h2>
+        <h2>Discover More</h2>
         <div class="info-links">
             <a href="projects.html" class="info-card">
                 <h3>Projects</h3>
