--- a/projects.html
+++ b/projects.html
@@ -59,13 +59,14 @@
                     distance regulation.</p>
                 <p><strong>Tools/Skills:</strong> Ada, Webots, C (Webots backend), Real Time Systems, Event Driven
                     Scheduling,
-                    Periodic Scheduling, Concurrent Programming</p>
+                    Periodic Scheduling</p>
                 <p><strong>Learning:</strong> Real time task scheduling, protected objects for synchronization,
                     sensor-based
                     control loops, robotics simulation, embedded systems design</p>
                 <p><strong>At:</strong> Uppsala University</p>
                 <p><strong>Date:</strong> Nov 2025</p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/realtime-systems-webots-ada" target="_blank">
+                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/realtime-systems-webots-ada"
+                        target="_blank">
                         Please check out the repo for more information</a></p>
             </div>
         </div>
@@ -73,38 +74,57 @@
         <div class="project">
             <div class="project-header" onclick="toggleProject(this)">
                 <span class="arrow">►</span>
-                <h3>Webots Robot Simulation</h3>
+                <h3>Indoor temperature humidity sensor</h3>
             </div>
             <div class="project-content">
-                <p><strong>Description:</strong> Programmed autonomous robot behavior using Ada in Webots simulation.
-                </p>
-                <p><strong>Tools/Skills:</strong> Ada, Webots, Robotics Algorithms</p>
-                <p><strong>Learning:</strong> Robotics programming, simulation environment, path planning</p>
-                <p><strong>University:</strong> Uppsala University</p>
-                <p><strong>Date:</strong> Sep 2025 – Nov 2025</p>
-                <p><strong>GitHub:</strong> Please check out the repo for more information <a
-                        href="https://github.com/AmineJml/webots-robot" target="_blank">Repo
-                        Link</a></p>
             </div>
         </div>
 
         <div class="project">
             <div class="project-header" onclick="toggleProject(this)">
                 <span class="arrow">►</span>
-                <h3>Parallel Coding Exercises</h3>
+                <h3>Parallel exercises</h3>
             </div>
             <div class="project-content">
-                <p><strong>Description:</strong> Optimized embedded algorithms using parallelization and concurrency
-                    techniques.</p>
-                <p><strong>Tools/Skills:</strong> C/C++, Multithreading, Performance Tuning</p>
-                <p><strong>Learning:</strong> Concurrency, performance optimization, embedded coding practices</p>
-                <p><strong>University:</strong> Uppsala University</p>
-                <p><strong>Date:</strong> Sep 2025 – Nov 2025</p>
-                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/parallel-exercises"
-                        target="_blank">Repo Link</a></p>
             </div>
         </div>
 
+        <div class="project">
+            <div class="project-header" onclick="toggleProject(this)">
+                <span class="arrow">►</span>
+                <h3>FYP </h3>
+            </div>
+            <div class="project-content">
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-header" onclick="toggleProject(this)">
+                <span class="arrow">►</span>
+                <h3>Mobile ionic </h3>
+            </div>
+            <div class="project-content">
+            </div>
+        </div>
+
+
+        <div class="project">
+            <div class="project-header" onclick="toggleProject(this)">
+                <span class="arrow">►</span>
+                <h3>C chat room </h3>
+            </div>
+            <div class="project-content">
+            </div>
+        </div>
+
+        <div class="project">
+            <div class="project-header" onclick="toggleProject(this)">
+                <span class="arrow">►</span>
+                <h3>Data mining report </h3>
+            </div>
+            <div class="project-content">
+            </div>
+        </div>
         <!-- Add more projects here following the same structure -->
 
     </section>
