--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8" />
-    <title>Amine Jamal</title>
+    <title>Amine Jamal | About Me</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="assets/css/style.css" />
 </head>
@@ -14,7 +14,7 @@
 
     <nav>
         <div class="nav-container">
-            <div class="logo"> <a href="index.html" >Amine Jamal</a></div>
+            <div class="logo"> <a href="index.html">Amine Jamal</a></div>
 
             <!-- DESKTOP -->
             <div class="nav-links desktop-nav">
@@ -36,19 +36,31 @@
     </nav>
 
 
+
     <section class="hero">
-        <h1>About Me</h1>
-        <p> I am a first year Embedded Systems student at Uppsala University, holding a Bachelor's degree from the Lebanese American
-        University. I have experience contributing to software engineering projects, and I am now focusing on embedded systems,
-        motivated by curiosity for low level programming, real time systems, and hardware software integration.
-        
-        <br> </br>
-        This portfolio showcases a selection of my projects and ongoing work. I'm always looking forward to learn, collaborate,
-        and build new things. Feel free to reach out if you'd like to work on a project together!
-</p>
+
+        <h1>Hey, I'm Amine!</h1>
+        <p>I am a first year Embedded Systems student at Uppsala University, with a Bachelor's degree in
+            Computer Science from the Lebanese American University.
+            I have experience contributing to software engineering projects and am now focusing on embedded systems,
+            motivated by low level programming, real time systems, and hardware software integration.
+
+
+            <br> </br>
+            This portfolio showcases a selection of my projects. I'm always looking forward to learn,
+            collaborate, and build new things. Feel free to reach out if you'd like to work on a project together!
+        </p>
+        <p>
+                            <div class="links">
+            <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
+            <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
+            <a href="mailto:aminejamal003@gmail.com">Email</a>
+        </div>
+        </p>
     </section>
 
-    <section class="section">
+    <!-- <section class="section">
         <h2>Education</h2>
 
         <div class="card">
@@ -62,7 +74,7 @@
             <p>Lebanese American University, Lebanon</p>
             <p>2020 to 2023</p>
         </div>
-    </section>
+    </section> -->
 
     <section class="section">
         <h2>Current Focus</h2>
@@ -88,17 +100,6 @@
                 <h3>Activities</h3>
                 <p>Hackathons, volunteering, and student initiatives.</p>
             </a>
-        </div>
-    </section>
-
-
-    <section class="section">
-        <h2>Links</h2>
-        <div class="links">
-            <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
-            <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
-            <a href="mailto:aminejamal003@gmail.com">Email</a>
         </div>
     </section>
 
