--- a/projects.html
+++ b/projects.html
@@ -71,60 +71,75 @@
             </div>
         </div>
 
+
         <div class="project">
             <div class="project-header" onclick="toggleProject(this)">
                 <span class="arrow">►</span>
-                <h3>Indoor temperature humidity sensor</h3>
+                <h3>Temperature & Humidity Monitor (Raspberry Pi + Sense HAT)</h3>
             </div>
             <div class="project-content">
+                <p><strong>Description:</strong> Simple indoor monitoring system that reads temperature and humidity
+                    using the
+                    Raspberry Pi Sense HAT.
+                    The data is exposed through a FastAPI backend and visualized on a small web dashboard.</p>
+                <p><strong>Tools/Skills:</strong> Raspberry Pi 3, Sense HAT, Python, FastAPI, REST API, Basic Embedded
+                    Systems,
+                    Web Dashboard</p>
+                <p><strong>Learning:</strong> Sensor data acquisition, API design, lightweight data visualization,
+                    integrating hardware readings with web services</p>
+                <p><strong>At:</strong> Uppsala University</p>
+                <p><strong>Date:</strong> Oct 2025</p>
+                <p><strong>GitHub:</strong>
+                    <a href="https://github.com/AmineJml/temperature_humidity_monitor" target="_blank">
+                        Please check out the repo for more information
+                    </a>
+                </p>
             </div>
         </div>
 
         <div class="project">
             <div class="project-header" onclick="toggleProject(this)">
                 <span class="arrow">►</span>
-                <h3>Parallel exercises</h3>
+                <h3>Course Offering System (Capstone Project)</h3>
             </div>
             <div class="project-content">
+                <p><strong>Description:</strong> University capstone project developed to assist the Department of
+                    Mathematics and Computer Science in determining course offerings for upcoming semesters. The system
+                    processes student enrollment records, academic progress (passed/failed courses), and prerequisite
+                    structures to generate data-driven recommendations on which courses to open and how many sections to
+                    consider. It also includes logic for identifying which professors are available to teach the
+                    proposed courses</p>
+                <p><strong>Tools/Skills:</strong> React, Django (Python), MySQL, REST APIs, Full Stack Development</p>
+                <p><strong>Learning:</strong> Frontend integration, backend API handling, working with relational
+                    databases, and collaborating within a two person development team.</p>
+                <p><strong>At:</strong> Lebanese American University</p>
+                <p><strong>Date:</strong> 2023</p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/TouficAlRifaii/CapstoneProject"
+                        target="_blank">Please check out the repo for more information
+                    </a>
+                </p>
             </div>
         </div>
 
         <div class="project">
             <div class="project-header" onclick="toggleProject(this)">
                 <span class="arrow">►</span>
-                <h3>FYP </h3>
+                <h3>Hiking App (Ionic)</h3>
             </div>
             <div class="project-content">
+                <p><strong>Description:</strong> Mobile application built with Ionic for hikers to discover, track, and
+                    plan hiking routes.</p>
+                <p><strong>Tools/Skills:</strong> Ionic, Angular, TypeScript, REST APIs, SQLite, Mobile
+                    Development</p>
+                <p><strong>Learning:</strong> Mobile UI/UX design, handling building cross-platform mobile applications, and connecting frontend with RESTful
+                    services.</p>
+                <p><strong>At:</strong> Lebanese American University</p>
+                <p><strong>Date:</strong> 2022</p>
+                <p><strong>GitHub:</strong> <a href="https://github.com/AmineJml/HikingApp-IONIC" target="_blank">Please check out the repo for more information</a></p>
             </div>
         </div>
 
-        <div class="project">
-            <div class="project-header" onclick="toggleProject(this)">
-                <span class="arrow">►</span>
-                <h3>Mobile ionic </h3>
-            </div>
-            <div class="project-content">
-            </div>
-        </div>
 
-
-        <div class="project">
-            <div class="project-header" onclick="toggleProject(this)">
-                <span class="arrow">►</span>
-                <h3>C chat room </h3>
-            </div>
-            <div class="project-content">
-            </div>
-        </div>
-
-        <div class="project">
-            <div class="project-header" onclick="toggleProject(this)">
-                <span class="arrow">►</span>
-                <h3>Data mining report </h3>
-            </div>
-            <div class="project-content">
-            </div>
-        </div>
         <!-- Add more projects here following the same structure -->
 
     </section>
