--- a/activities.html
+++ b/activities.html
@@ -1,1 +1,121 @@
-<h1>Activities</h1>
+<!DOCTYPE html>
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8" />
+    <title>Amine Jamal | Activities</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="assets/css/style.css" />
+</head>
+
+<body>
+
+    <div class="grid-bg"></div>
+
+    <nav>
+        <div class="nav-container">
+            <div class="logo"><a href="index.html">Amine Jamal</a></div>
+
+            <div class="nav-links desktop-nav">
+                <a href="projects.html">Projects</a>
+                <a href="experience.html">Experience</a>
+                <a href="activities.html">Activities</a>
+            </div>
+
+            <div class="menu-btn" onclick="toggleMenu()">⋮</div>
+        </div>
+
+        <div class="mobile-menu" id="mobileMenu">
+            <a href="projects.html">Projects</a>
+            <a href="experience.html">Experience</a>
+            <a href="activities.html">Activities</a>
+        </div>
+    </nav>
+
+    <section class="section">
+        <h2>Activities & Extracurriculars</h2>
+
+        <div class="card">
+            <h3>Digitalization Group, Uppsala teknolog- och naturvetarkår</h3>
+            <p>Nov 2025 – Present | Uppsala, Sweden</p>
+            <ul>
+                <li>Contributing to student-led initiatives for digital solutions and event support.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Assisted at UTNARM Career Fair</h3>
+            <p>2025 | Uppsala, Sweden</p>
+            <ul>
+                <li>Supported the organization and coordination of career fair activities for students and companies.
+                </li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Oracle Hackathon Participant</h3>
+            <p>2025 | Sweden</p>
+            <ul>
+                <li>Attended an Oracle-hosted hackathon, developing and presenting technical solutions in a competitive
+                    environment.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>Volunteer, Lebanese Red Cross</h3>
+            <p>Apr 2024 – Mar 2025 | North, Lebanon</p>
+            <ul>
+                <li>Assisted in community health initiatives and emergency support operations.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>GMI Mentorship Program, Mentee</h3>
+            <p>Feb 2023 – Jan 2023 | Byblos, Lebanon</p>
+            <ul>
+                <li>Gained guidance in academic and professional development through mentorship.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>PR of the Computer Science Club</h3>
+            <p>Sep 2022 – May 2023 | Lebanese American University, Byblos</p>
+            <ul>
+                <li>Managed club communications and promoted events within the student community.</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h3>World Robotics Olympiad – 2nd Place</h3>
+            <p>Jul 2020 | Mejdalaya, Lebanon</p>
+            <ul>
+                <li>Competed in international robotics challenges focusing on design and programming.</li>
+            </ul>
+        </div>
+
+    </section>
+
+    <section class="section">
+        <h2>Links</h2>
+        <div class="links">
+            <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
+            <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
+            <a href="mailto:aminejamal003@gmail.com">Email</a>
+        </div>
+    </section>
+
+    <footer>
+        <p>© Amine Jamal</p>
+    </footer>
+
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('mobileMenu');
+            menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
+        }
+    </script>
+
+</body>
+
+</html>
