updating index and adding links to project page

--- a/experience.html
+++ b/experience.html
@@ -70,7 +70,7 @@
             <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
             <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
             <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
-            <a href="mailto:aminejamal003@gmail.com">Email</a>
+            <a href="mailto:amine.jamal1@outlook.com">Email</a>
         </div>
     </section>
 
