--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
             <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
             <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
-            <a href="mailto:aminejamal003@gmail.com">Email</a>
+            <a href="mailto:amine.jamal1@outlook.com">Email</a>
         </div>
         </p>
     </section>
@@ -76,15 +76,7 @@
         </div>
     </section> -->
 
-    <section class="section">
-        <h2>Current Focus</h2>
-        <ul>
-            <li>Embedded software</li>
-            <li>Linux based systems</li>
-            <li>Microcontrollers and real time systems</li>
-        </ul>
 
-    </section>
     <section class="section">
         <h2>Discover More</h2>
         <div class="info-links">
@@ -103,6 +95,15 @@
         </div>
     </section>
 
+        <section class="section">
+        <h2>Current Focus</h2>
+        <ul>
+            <li>Embedded software</li>
+            <li>Linux based systems</li>
+            <li>Microcontrollers and real time systems</li>
+        </ul>
+
+    </section>
     <footer>
         <p>© Amine Jamal</p>
     </footer>
