--- a/projects.html
+++ b/projects.html
@@ -144,6 +144,17 @@
 
     </section>
 
+        <section class="section">
+        <h2>Links</h2>
+        <div class="links">
+            <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
+            <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
+            <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
+            <a href="mailto:amine.jamal1@outlook.com">Email</a>
+        </div>
+    </section>
+
+
     <footer>
         <p>© Amine Jamal</p>
     </footer>
