--- a/index.html
+++ b/index.html
@@ -14,20 +14,17 @@
 
     <nav>
         <div class="nav-container">
-            <div class="logo"> <a href="index.html">Amine Jamal</a></div>
+            <div class="logo"><a href="index.html">Amine Jamal</a></div>
 
-            <!-- DESKTOP -->
             <div class="nav-links desktop-nav">
                 <a href="projects.html">Projects</a>
                 <a href="experience.html">Experience</a>
                 <a href="activities.html">Activities</a>
             </div>
 
-            <!-- MOBILE MENU BUTTON -->
             <div class="menu-btn" onclick="toggleMenu()">⋮</div>
         </div>
 
-        <!-- MOBILE DROPDOWN -->
         <div class="mobile-menu" id="mobileMenu">
             <a href="projects.html">Projects</a>
             <a href="experience.html">Experience</a>
@@ -36,29 +33,38 @@
     </nav>
 
 
-
     <section class="hero">
+        <div class="hero-content">
 
-        <h1>Hey, I'm Amine!</h1>
-        <p>I am a first year Embedded Systems student at Uppsala University, with a Bachelor's degree in
-            Computer Science from the Lebanese American University.
-            I have experience contributing to software engineering projects and am now focusing on embedded systems,
-            motivated by low level programming, real time systems, and hardware software integration.
+            <div class="hero-text">
+                <h1>Hey, I'm Amine!</h1>
+                <p>
+                    I am a first year Embedded Systems student at Uppsala University, with a Bachelor's degree in
+                    Computer Science from the Lebanese American University.
+                    I have experience contributing to software engineering projects and am now focusing on embedded
+                    systems,
+                    motivated by low level programming, real time systems, and hardware software integration.
+                    <br><br>
+                    This portfolio showcases a selection of my projects. I'm always looking forward to learn,
+                    collaborate, and build new things. Feel free to reach out if you'd like to work on a project
+                    together!
+                </p>
 
+                <div class="links">
+                    <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
+                    <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
+                    <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
+                    <a href="mailto:amine.jamal1@outlook.com">Email</a>
+                </div>
+            </div>
 
-            <br> </br>
-            This portfolio showcases a selection of my projects. I'm always looking forward to learn,
-            collaborate, and build new things. Feel free to reach out if you'd like to work on a project together!
-        </p>
-        <p>
-                            <div class="links">
-            <a href="assets/Amine_Jamal_CV.pdf" target="_blank">CV</a>
-            <a href="https://github.com/AmineJml" target="_blank">GitHub</a>
-            <a href="https://linkedin.com/in/amine-jamal-a06012220/" target="_blank">LinkedIn</a>
-            <a href="mailto:amine.jamal1@outlook.com">Email</a>
+            <div class="hero-image">
+                <img src="assets/images/profile.jpg" alt="Amine Jamal">
+            </div>
+
         </div>
-        </p>
     </section>
+
 
     <!-- <section class="section">
         <h2>Education</h2>
@@ -95,7 +101,7 @@
         </div>
     </section>
 
-        <section class="section">
+    <section class="section">
         <h2>Current Focus</h2>
         <ul>
             <li>Embedded software</li>
@@ -109,5 +115,12 @@
     </footer>
 
 </body>
+
+    <script>
+        function toggleMenu() {
+            const menu = document.getElementById('mobileMenu');
+            menu.style.display = menu.style.display === 'flex' ? 'none' : 'flex';
+        }
+    </script>
 
 </html>
